<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="#FF914D" >

    <ImageView
        android:id="@+id/product8Image"
        android:layout_width="241dp"
        android:layout_height="151dp"
        android:layout_marginTop="-80dp"
        android:contentDescription="@string/product8_description"
        android:scaleType="centerCrop"
        android:src="@drawable/pblogo"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="16dp">

    </ImageView>


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#6D0016"
        android:text="@string/checkout2" />

    <EditText
        android:id="@+id/editTextText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/name4" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/surname3" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="40dp"
        android:inputType="text"
        android:hint="@string/address8" />

    <Button
        android:id="@+id/button"
        android:layout_marginTop="20dp"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:backgroundTint="#6D0016"
        android:text="@string/confirm_order" />

</LinearLayout>