<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="#FF914D" >

    <ImageView
        android:id="@+id/product8Image"
        android:layout_width="241dp"
        android:layout_height="151dp"
        android:layout_marginTop="-40dp"
        android:contentDescription="@string/product8_description"
        android:scaleType="centerCrop"
        android:src="@drawable/pblogo"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="16dp">

    </ImageView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="125dp"
        android:text="@string/your_cart1"
        android:textColor="#6D0016"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="142dp" />

    <ImageView
        android:id="@+id/product5Image"
        android:layout_width="97dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="110dp"
        android:contentDescription="@string/product5_description"
        android:scaleType="centerCrop"
        android:src="@drawable/muttonsukkah"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="196dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-70dp"
        android:text="@string/mutton_sukkah"
        android:textColor="#230007"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="-40dp"
        android:backgroundTint="#6D0016"
        android:text="REMOVE"
        android:textSize="14sp">

    </Button>

    <ImageView
        android:id="@+id/product2Image"
        android:layout_width="97dp"
        android:layout_height="90dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="110dp"
        android:contentDescription="@string/product2_description"
        android:scaleType="centerCrop"
        android:src="@drawable/biryani"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="443dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="87dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-70dp"
        android:text="@string/chicken_biryani1"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#230007" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:text="REMOVE"
        android:textSize="14sp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="-40dp"
        android:backgroundTint="#6D0016">

    </Button>

    <Button
        android:id="@+id/removebutton"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:text="@string/checkout"
        android:textSize="14sp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="90dp"
        android:backgroundTint="#6D0016">

    </Button>

</LinearLayout>