<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:background="#FF914D">

        <!-- Image and Button for Product 1 -->

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="150dp"
            android:layout_marginBottom="-100dp"
            android:background="#FF914D"
            android:src="@drawable/cart"
            android:onClick="goToCart">
        </ImageButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="150dp"
            android:text="@string/your_cart">

        </TextView>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="80dp">

        <ImageView
            android:id="@+id/product1Image"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/vadapav"
            android:contentDescription="@string/product1_description"
            android:scaleType="centerCrop"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vada_pav_9_99"
            android:textColor="#000000"
            android:textStyle="bold"
            />

            <TextView
                android:layout_width="276dp"
                android:layout_height="wrap_content"
                android:text="@string/veg_indian_street_food_spicy_potato_fritter_vada_sandwiched_between_a_soft_bun_pav"
                android:textStyle="italic" />

            <Button
            android:id="@+id/product1Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#6D0016"
            android:text=" A D D"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Image and Button for Product 2 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/product2Image"
            android:layout_width="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_height="200dp"
            android:src="@drawable/biryani"
            android:contentDescription="@string/product2_description"
            android:scaleType="centerCrop"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chicken_biryani_20_00"
            android:textColor="#000000"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NON VEG - Marinated Chicken with aromatic rice"
            android:textStyle="italic" />

        <Button
            android:id="@+id/product2Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="A D D"
            android:layout_marginTop="10dp"
            android:backgroundTint="#6D0016"
            android:textStyle="bold"
            />
    </LinearLayout>

    <!-- Image and Button for Product 3 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/product3Image"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/poha"
            android:contentDescription="@string/product3_description"
            android:scaleType="centerCrop"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="POHA - $15.00"
            android:textColor="#000000"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:text="VEG - Indian breakfast dish made from flattened rice cooked with onions, potatoes, peanuts, and spices"
            android:textStyle="italic" />

        <Button
            android:id="@+id/product3Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="A D D"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:backgroundTint="#6D0016"/>
    </LinearLayout>

    <!-- Image and Button for Product 4 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/product4Image"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/thali"
            android:contentDescription="@string/product4_description"
            android:scaleType="centerCrop"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="VEG KOLHAPURI THALI - $40.00"
            android:textColor="#000000"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:text="VEG - A flavorful spread of spicy vegetarian dishes from Maharashtra, celebrating regional cuisine in a single platter."
            android:textStyle="italic" />


        <Button
            android:id="@+id/product4Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="A D D"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:backgroundTint="#6D0016"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/product5Image"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/muttonsukkah"
            android:contentDescription="@string/product5_description"
            android:scaleType="centerCrop"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MUTTON SUKKAH - $35.00"
            android:textColor="#000000"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:text="NON VEG - Succulent morsels of tender mutton cooked with fiery spices in a dry, aromatic gravy, epitomizing the bold flavors of South Indian cuisine."
            android:textStyle="italic" />

        <Button
            android:id="@+id/product5Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="A D D "
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:backgroundTint="#6D0016"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/product6Image"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/fishthali"
            android:contentDescription="@string/product6_description"
            android:scaleType="centerCrop"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/malvani_fish_thali_60_00"
            android:textColor="#000000"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:text="NON VEG - A coastal feast showcasing the best of Malvani cuisine with spicy fish curry, crispy fried fish, and traditional accompaniments, delivering a burst of coastal flavors in every bite. "
            android:textStyle="italic" />


        <Button
            android:id="@+id/product6Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="A D D"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:backgroundTint="#6D0016"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/product7Image"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/pithlabhakri"
            android:contentDescription="@string/product7_description"
            android:scaleType="centerCrop"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pithla_bhakri_70_00"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:text="@string/veg_a_hearty_maharashtrian_staple_combining_gram_flour_curry_with_unleavened_millet_bread_for_a_satisfying_and_wholesome_meal"
            android:textStyle="italic" />


        <Button
            android:id="@+id/product7Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="A D D"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:backgroundTint="#6D0016"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/product8Image"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/pavbhaji"
            android:contentDescription="@string/product8_description"
            android:scaleType="centerCrop"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pav_bhaji_80_00"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:text="VEG - A Mumbai street food classic, featuring a spicy vegetable mash served with buttered bread rolls, delivering a burst of flavors in every bite."
            android:textStyle="italic" />

        <Button
            android:id="@+id/product8Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_d_d"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:backgroundTint="#6D0016"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
